# csilgen

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  csil-spec.md  getting-started.md
crates/core_generators/csilgen-go/: Cargo.toml  README.md
crates/core_generators/csilgen-go/src/: lib.rs
crates/core_generators/csilgen-go/tests/: constructors_test.rs  integration.rs  package_docs_test.rs  validation_test.rs  yaml_tags_test.rs
crates/core_generators/csilgen-json/: Cargo.toml
crates/core_generators/csilgen-json/src/: lib.rs
crates/core_generators/csilgen-openapi/: Cargo.toml
crates/core_generators/csilgen-openapi/src/: lib.rs
crates/core_generators/csilgen-python/: Cargo.toml
crates/core_generators/csilgen-python/src/: lib.rs
crates/core_generators/csilgen-rust/: Cargo.toml
crates/core_generators/csilgen-rust/src/: lib.rs
crates/core_generators/csilgen-rust/tests/: serde_bytes_test.rs  service_trait_test.rs
crates/core_generators/csilgen-typescript/: Cargo.toml
crates/core_generators/csilgen-typescript/src/: lib.rs
crates/csilgen-cli/: Cargo.toml
crates/csilgen-cli/src/: dependency_report.rs  error_reporting.rs  lib.rs  main.rs
crates/csilgen-common/: Cargo.toml
crates/csilgen-common/src/: error.rs  error_message_tests.rs  lib.rs  testing.rs  types.rs
crates/csilgen-core/: Cargo.toml
crates/csilgen-core/benches/: dependency_analysis.rs  parsing_benchmarks.rs  performance_benchmarks.rs
crates/csilgen-core/src/: ast.rs  breaking.rs  dependency.rs  formatter.rs  lexer.rs  lib.rs  linter.rs  parser.rs  performance.rs  resolver.rs  scanner.rs  validator.rs
crates/csilgen-core/tests/: integration_tests.rs  snapshot_tests.rs
examples/: .gitignore
examples/basic-usage/: README.md  simple-service.csil
examples/breaking-changes/: README.md  api-v1.csil  api-v2.csil
examples/build-integration/: README.md
examples/build-integration/npm-project/: api.csil
examples/build-integration/rust-project/: Cargo.toml  api.csil
examples/complex-metadata/: README.md  advanced-api.csil  simple-ge-demo.csil
examples/custom-generator/: Cargo.toml  README.md  build.sh  example-input.csil
examples/multi-file/: README.md
examples/multi-file/contained/: common.csil  main.csil  standalone.csil  types.csil
examples/multi-file/dependencies/: common-types.csil  user-types.csil
examples/multi-file/entry-points/: admin-api.csil  user-api.csil
examples/multi-file/mixed/: main.csil  standalone.csil
examples/multi-file/mixed/shared/: errors.csil  types.csil
examples/real-world-api/: README.md  e-commerce-api.csil
tests/: README.md  breaking_change_integration_tests.rs  cli_environment_tests.rs  cross_platform_tests.rs  format_lint_integration_tests.rs  integration_tests.rs  performance_integration_tests.rs  wasm_integration_tests.rs
tests/fixtures/basic/: arrays-and-maps.csil  arrays-and-maps.meta.json  choices-and-unions.csil  choices-and-unions.meta.json  complex-arrays-maps.csil  complex-arrays-maps.meta.json  group-definition.csil  group-definition.meta.json  group-operations.csil  group-operations.meta.json  numeric-types.csil  numeric-types.meta.json  simple-types.csil  simple-types.meta.json  text-and-bytes.csil  text-and-bytes.meta.json
tests/fixtures/breaking-changes/: v1-metadata-api.csil  v1-metadata-api.meta.json  v1-service-api.csil  v1-service-api.meta.json  v1-user.csil  v1-user.meta.json  v2-metadata-api-breaking.csil  v2-metadata-api-breaking.meta.json  v2-service-api-breaking.csil  v2-service-api-breaking.meta.json  v2-user-breaking.csil  v2-user-breaking.meta.json  v2-user-compatible.csil  v2-user-compatible.meta.json
tests/fixtures/dependency-graphs/circular/: a.csil  b.csil  c.csil
tests/fixtures/dependency-graphs/diamond/: left.csil  main.csil  right.csil  shared.csil
tests/fixtures/dependency-graphs/multiple-entry/: admin.csil  (+2 more)
tests/fixtures/invalid/: invalid-cddl-syntax.csil  invalid-cddl-syntax.meta.json  invalid-csil-services.csil  invalid-csil-services.meta.json  invalid-metadata.csil  invalid-metadata.meta.json  missing-assignment.csil  missing-assignment.meta.json  unclosed-group.csil  unclosed-group.meta.json
tests/fixtures/metadata/: comprehensive-field-metadata.csil  comprehensive-field-metadata.meta.json  field-dependencies.csil  field-dependencies.meta.json  field-visibility.csil  field-visibility.meta.json  validation-metadata.csil  validation-metadata.meta.json
tests/fixtures/performance/: large-schema.csil  large-schema.meta.json  mega-api.csil  mega-api.meta.json
tests/fixtures/real-world/: ecommerce-api.csil  ecommerce-api.meta.json  social-media-api.csil  social-media-api.meta.json
tests/fixtures/services/: bidirectional-service.csil  bidirectional-service.meta.json  complex-service.csil  complex-service.meta.json  multiple-services.csil  multiple-services.meta.json  simple-service.csil  simple-service.meta.json
tools/generator-template/: Cargo.toml  GENERATOR_INTERFACE.md  Makefile  PACKAGING.md  README.md  build.rs  build.sh  test.sh
tools/generator-template/.github/workflows/: ci.yml
tools/generator-template/examples/go-generator/: Cargo.toml
tools/generator-template/examples/go-generator/src/: lib.rs
tools/generator-template/examples/simple-docs/: Cargo.toml  README.md
tools/generator-template/examples/simple-docs/src/: lib.rs
tools/generator-template/src/: helpers.rs  lib.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
wasm/csilgen-json-generator/: Cargo.toml
wasm/csilgen-json-generator/src/: lib.rs
wasm/csilgen-noop-generator/: Cargo.toml
wasm/csilgen-noop-generator/src/: lib.rs
wasm/csilgen-rust-generator/: Cargo.toml
wasm/csilgen-rust-generator/src/: lib.rs
wasm/csilgen-simple-test/: Cargo.toml
wasm/csilgen-simple-test/src/: lib.rs
wasm/csilgen-typescript-generator/: Cargo.toml
wasm/csilgen-typescript-generator/src/: lib.rs
wasm/csilgen-wasm-core/: Cargo.toml
wasm/csilgen-wasm-core/src/: lib.rs
wasm/csilgen-wasm-generators/: Cargo.toml
wasm/csilgen-wasm-generators/src/: lib.rs
wasm/csilgen-wasm-generators/tests/: integration_tests.rs
(+14 files in other folders)
