[workspace]
resolver = "2"
members = [
    "crates/csilgen-core",
    "crates/csilgen-cli", 
    "crates/csilgen-common",
    "crates/core_generators/csilgen-json",
    "crates/core_generators/csilgen-rust",
    "crates/core_generators/csilgen-python",
    "crates/core_generators/csilgen-typescript",
    "crates/core_generators/csilgen-openapi",
    "wasm/csilgen-wasm-core",
    "wasm/csilgen-wasm-generators",
    "wasm/csilgen-noop-generator",
    "wasm/csilgen-simple-test",
    "wasm/csilgen-json-generator",
    "wasm/csilgen-rust-generator",
    "wasm/csilgen-typescript-generator",
    "tools/xtask"
]

# Shared dependencies
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
wasm-bindgen = "0.2"
anyhow = "1.0"
thiserror = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
glob = "0.3"
console = "0.15"
indicatif = "0.17"
atty = "0.2"

# Internal crate dependencies
csilgen-core = { path = "crates/csilgen-core" }
csilgen-common = { path = "crates/csilgen-common" }
csilgen-wasm-generators = { path = "wasm/csilgen-wasm-generators" }


[workspace.metadata.release]
# Configuration for cargo-release if used

# Profile configurations for all workspace members
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Optimize WASM builds for size
[profile.release.package."csilgen-json-generator"]
opt-level = "s"  # Optimize for size

[profile.release.package."csilgen-rust-generator"]  
opt-level = "s"  # Optimize for size

[profile.release.package."csilgen-typescript-generator"]
opt-level = "s"  # Optimize for size

[profile.release.package."csilgen-noop-generator"]
opt-level = "s"  # Optimize for size

# Development profile
[profile.dev]
debug = true
opt-level = 0

