[package]
name = "custom-csil-generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# In a real implementation, this would reference published crates
csilgen-core = { path = "../../crates/csilgen-core" }
csilgen-common = { path = "../../crates/csilgen-common" }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]