[package]
name = "csilgen-generator-template"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
description = "Template for creating custom CSIL generators as WASM modules"
homepage = "https://github.com/your-org/your-generator"
repository = "https://github.com/your-org/your-generator"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
csilgen-common = { path = "../../crates/csilgen-common", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"