[package]
name = "csilgen-noop-generator"
version = "0.1.0"
edition = "2024"
description = "Noop test generator for validating WASM workflow"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csilgen-common = { path = "../../crates/csilgen-common" }