[package]
name = "csilgen-rust-generator"
version = "0.1.0"
edition = "2024"
authors = ["CSIL Team"]
description = "Rust code generator WASM module for csilgen"
homepage = "https://github.com/catalystcommunity/csilgen/rust-generator"

[lib]
crate-type = ["cdylib"]

[dependencies]
csilgen-common = { path = "../../crates/csilgen-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []