[package]
name = "csilgen-typescript-generator"
version = "0.1.0"
edition = "2024"
description = "TypeScript code generator WASM module for csilgen"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
csilgen-common.workspace = true
anyhow.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.wasm-bindgen]
version = "0.2"