[package]
name = "csilgen-openapi"
version = "0.1.0"
edition = "2024"
description = "OpenAPI specification generator for csilgen"
license = "Apache-2.0"

[dependencies]
serde.workspace = true
csilgen-core.workspace = true
csilgen-common.workspace = true
anyhow.workspace = true
serde_json.workspace = true