[package]
name = "csilgen-docs-generator"
version = "0.1.0"
edition = "2021"
authors = ["CSIL Team <csilgen@example.com>"]
license = "Apache-2.0"
description = "Simple documentation generator for CSIL specifications"
homepage = "https://github.com/catalystcommunity/csilgen/docs-generator"
repository = "https://github.com/catalystcommunity/csilgen/docs-generator"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
csilgen-common = { path = "../../../../crates/csilgen-common", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"